--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "gendiff",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "scripts": {
+    "test": "jest",
     "build": "cross-env NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build"
   },
@@ -23,11 +24,13 @@
     "@babel/node": "^7.6.3",
     "@babel/preset-env": "^7.6.3",
     "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
     "cross-env": "^6.0.3",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "jest": "^24.9.0"
   },
   "repository": {
     "type": "git",
