--- a/__tests__/__fixtures__/before.ini
+++ b/__tests__/__fixtures__/before.ini
@@ -1,5 +1,15 @@
-host=hexlet_io
-timeout=50
-proxy=123_234_53_22
-nadal=rafael
-follow=false
+[common]
+setting1=Value 1
+setting2=200
+setting3=true
+[setting6] 
+key=value
+
+[group1]
+baz=bas
+foo=bar
+[nest]
+key=value
+ 
+[group2]
+abc=12345
