--- a/__tests__/__fixtures__/after.ini
+++ b/__tests__/__fixtures__/after.ini
@@ -1,14 +1,10 @@
 [common]
 follow=false
 setting1=Value 1
-[setting3]
-key=value
+setting3=value
 setting4=blah blah
-[setting5]
-key5=value5
-[setting6]
-key=value
-ops=vops
+setting5=value5
+setting6=value
 
 [group1]
 foo=bar
