--- a/__tests__/__fixtures__/before.ini
+++ b/__tests__/__fixtures__/before.ini
@@ -2,14 +2,12 @@
 setting1=Value 1
 setting2=200
 setting3=true
-[setting6] 
-key=value
+setting6=value
 
 [group1]
 baz=bar
 foo=bar
-[nest]
-key=value
- 
+nest=value
+
 [group2]
 abc=12345
