--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,8 @@
-name: Node.js CI
+name: Node CI
 
-on: [push]
+on:
+  - push
+  - pull_request
 
 jobs:
   build:
@@ -17,10 +19,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install, build, and test
+      - name: npm test
         run: |
-          make install
-          make build
           make test
         env:
           CI: true
