--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm test
         run: |
-          make test
+          make jest
         env:
           CI: true
       - name: Run linter
