--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
-    "jest": "^24.9.0"
+    "eslint-plugin-jest": "^23.7.0",
+    "jest": "^24.9.0",
+    "jest-cli": "^25.1.0"
   },
   "repository": {
     "type": "git",
