--- a/__tests__/__fixtures__/before.ini
+++ b/__tests__/__fixtures__/before.ini
@@ -1,13 +1,15 @@
 [common]
 setting1=Value 1
-setting2=200
+setting2='200'
 setting3=true
-setting6=value
+[common.setting6]
+key=value
 
 [group1]
 baz=bar
 foo=bar
-nest=value
+[group1.nest]
+key=value
 
 [group2]
-abc=12345
+abc='12345'
