--- a/__tests__/__fixtures__/after.ini
+++ b/__tests__/__fixtures__/after.ini
@@ -1,10 +1,14 @@
 [common]
 follow=false
 setting1=Value 1
-setting3=value
 setting4=blah blah
-setting5=value5
-setting6=value
+[common.setting3]
+key=value
+[common.setting5]
+key5=value5
+[common.setting6]
+key=value
+ops=vops
 
 [group1]
 foo=bar
@@ -12,4 +16,4 @@ baz=bars
 nest=str
 
 [group3]
-fee=100500
+fee='100500'
