--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "type": "git",
     "url": "git+https://github.com/Sergey89274291549/frontend-project-lvl2.git"
   },
-  "author": "sergey",
+  "author": "Sergey Suchkov",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Sergey89274291549/frontend-project-lvl2/issues"
