small refactoring, add node ci for tests

--- a/.github/workflows/nodejstests.yml
+++ b/.github/workflows/nodejstests.yml
@@ -22,8 +22,6 @@ jobs:
                 run: |
                     make install
                     make build
+                    make test
                 env:
                     CI: true
-            -   name: Run linter
-                run: |
-                    make lint
