--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,18 +1,20 @@
 ---
 
 plugins:
-  - babel
-  - jest
+    - babel
+    - jest
 
 env:
-  node: true
-  jest: true
+    node: true
+    jest: true
 
 parser: babel-eslint
 
 extends:
-  - 'airbnb-base'
-  - 'plugin:jest/recommended'
+    - 'airbnb-base'
+    - 'plugin:jest/recommended'
 
 rules:
-  no-console: 0
+    no-console: 0
+    indent: [ "error", 4 ]
+    no-param-reassign: [ "error", { "props": false } ]
