--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,3 +18,4 @@ rules:
     no-console: 0
     indent: [ "error", 4 ]
     no-param-reassign: [ "error", { "props": false } ]
+    import/prefer-default-export: 0
